Convert temperature units, double digit date/time
Temperature units will be converted from fahrenheit to celsius and
celsius to fahrenheit on the user's command by the press of a button.

Single digit dates and times and will be converted to double digits by
adding a zero in front of them.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
+    "no-alert": "off",
     "no-undef": "off",
     "no-unused-vars": "warn"
   }
